--- a/ENIGMAxVSSUT/package.json
+++ b/ENIGMAxVSSUT/package.json
@@ -13,7 +13,8 @@
     "gsap": "^3.13.0",
     "lenis": "^1.3.9",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "three": "^0.179.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
